# Chloroplast-Genome-Analysis-Suite-CGAS

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  USAGE.md  environment-minimal.yml  environment.yml  pyproject.toml  requirements.txt  setup.py  setup_github_repo.sh
Documents/: CGAS_Module10_Presentation.pptx  CGAS_Module11_Presentation.pptx  CGAS_Module12_Presentation.pptx  CGAS_Module13_Presentation.pptx  CGAS_Module14_Presentation.pptx  CGAS_Module1_presentation.pptx  CGAS_Module2_Presentation.pptx  CGAS_Module3_Presentation.pptx  CGAS_Module4_Presentation.pptx  CGAS_Module5_Presentation.pptx  CGAS_Module6_Presentation.pptx  CGAS_Module7_Presentation.pptx  CGAS_Module8_Presentation.pptx  CGAS_Module9_Presentation.pptx  PGA_Installation_README.md  README_PGA.md  module1.md  module10.md  module11.md  module12.md  module13.md  module14.md  module2.md  module3.md  module4.md  module5.md  module6.md  module7.md  module8.md  module9.md
Documents/Old scripts/: Old_Scripts_README.md  cgas_module14.py
cgas/: __init__.py  cgas_module1.py  cgas_module10.py  cgas_module11.py  cgas_module12.py  cgas_module13.py  cgas_module14.py  cgas_module2.py  cgas_module3.py  cgas_module4.py  cgas_module5.py  cgas_module6.py  cgas_module7.py  cgas_module8.py  cgas_module9.py  cli.py
chloroplast_analyzer/: __init__.py  cli.py  cli.py.old  cli.pyz  module1_gene_count.py  module2_gene_table.py  module3_comparative_analysis.py  module4_codon_usage.py  module5_amino_acid.py  module6_snp_analysis.py  module7_intron_extraction.py  module8_ssr_analysis.py  module9_diversity_analysis.py  unified_analyzer.py
test_files/: TEST_README.md
test_files/annotations/: organims.txt
test_files/annotations/reference/: Buxus_sinica.gb
test_files/annotations/targets/: SRR18086674_1.fasta  SRR18086674_2.fasta  SRR7121736_1.fasta  SRR7121736_2.fasta
test_files/fasta_files/: Erigeron compositus.fasta  Erigeron denalii.fasta  Erigeron elongatus.fasta  Erigeron humilis.fasta  Erigeron muirii.fasta  Erigeron peregrinus.fasta  Erigeron philadelphicus.fasta  Erigeron silenifolius.fasta  Erigeron uniflorus.fasta
test_files/gb_files/: Erigeron compositus.gb  Erigeron denalii.gb  Erigeron elongatus.gb  Erigeron humilis.gb  Erigeron muirii.gb  Erigeron peregrinus.gb  Erigeron philadelphicus.gb  Erigeron silenifolius.gb  Erigeron uniflorus.gb  Erigeron_acris.gb
test_files/normalization/: Erigeron compositus.gb  Erigeron denalii.gb  Erigeron elongatus.gb
